# X-FORECAST

./: .env.example  .gitignore  AUTHENTICATION_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CYBERPUNK_AI_DASHBOARD_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_CLEANUP_SUMMARY.md  DOCUMENTATION.md  FINAL_PROJECT_STATUS.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE_ANALYSIS.md  RAG_MANAGER_CONSOLIDATION.md  README.md  README_SIMPLE.md  STARTUP_INSTRUCTIONS.md  bypass_login.py  chatbot_demo.py  create_multiple_test_users.py  create_test_user.py  create_test_users.py  fix_auth.py  generate_dummy_data.py  main.py  netlify.toml  performance_integration_report_20251118_131349.json  performance_monitoring_test_results.json  pyproject.toml  quick_setup.py  requirements.txt  requirements_rag.txt  setup.py  setup_dev_environment.py  simple-test.py  simple_auth_test.py  simple_benchmark_report_20251118_131030.json  simple_server.py  start-dev.ps1  superx_complete_system.py  (+10 more)
data/: sample_data.csv
demo_output_demo_retail_001/: forecast_summary.txt
docs/: API_DOCUMENTATION.md  AUTHENTICATION_SYSTEM.md  COMPANY_SALES_SYSTEM_README.md  DOCUMENTATION.md  FILE_STRUCTURE.md  NETLIFY_DEPLOYMENT.md  RAG_INITIALIZATION.md  RAG_SYSTEM_RELIABILITY.md  START_SYSTEM.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  VECTOR_RAG_SETUP.md  WINDOWS_SETUP.md
frontend/: nginx.conf  package-lock.json  package.json  tsconfig.json
model_version_management/: version_management.json
model_versions/: training_jobs.json  version_history.json
src/: __init__.py
tests/: README.md  test_models.py  (+1 more)
(+247 files in other folders)
