[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-forecast"
version = "0.1.0"
description = "AI-Powered Demand Forecasting Engine"
authors = [{name = "X-FORECAST Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
dev = ["pytest>=7.0.0", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]